syntax = "proto3";
import "google/protobuf/timestamp.proto";

message User{
	uint32 ID = 1;
	string Name = 2;
	string Surname	= 3;
	string Email = 4;
}

message Login{
	User user = 1;
	bool IsActive = 2;
	uint32 FailedAttemps = 3;
	google.protobuf.Timestamp  LastLogin = 4;
}